<resources>
    <string name="app_name" translatable="false">SmartphoneAttacks</string>


    <!-- Action Names -->
    <string name="action_startTouchLogger" translatable="false">Start TouchLogger</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="action_aboutUs" translatable="false">About Us</string>


    <!-- Labels-->
    <string name="button_save" translatable="false">Save</string>
    <string name="label_type">Please type key:</string>
    <string name="label_typedKey">You typed:</string>

    <string name="label_chooseLayoutandOrient">Please choose the layout orientation</string>
    <string name="label_layout">Layout</string>
    <string name="label_orientation">Orientation</string>
    <string name="label_variation">Variation</string>
    <string name="label_hardwareaddons">Hardware-Addons</string>
    <string name="label_input">Input</string>
    <string name="label_posture">Posture</string>
    <string name="label_externalfactors">External Factors</string>


    <string name="train_Loggerapp">Try to train the LoggerApp before using it!</string>
    <string name="label_pleaseentername">Enter your UserID</string>
    <string name="label_welcome">Welcome</string>
    <string name="navigate_message">Please open the Navigation panel on the left to start using the app</string>
    <string name="hello_world">Hello world!</string>

    <!-- Dropdowns -->
    <string-array name="layout_arrays">
        <item>Keyboard</item>
        <item>Icon Grid</item>
        <item>PIN</item>
    </string-array>

    <string-array name="orientation_arrays">
        <item>Portrait</item>
        <item>Left Landscape</item>
        <item>Right Landscape</item>
    </string-array>

    <string-array name="variation_arrays">
        <item>Standard</item>
        <item>Split</item>
        <item>Additional Buttons</item>
    </string-array>

    <string-array name="hardware_addons_arrays">
        <item>None</item>
        <item>Bumper</item>
        <item>Protectors</item>
    </string-array>

    <string-array name="input_Arrays">
        <item>Thumbs</item>
        <item>One Finger</item>
        <item>Two Fingers</item>
    </string-array>

    <string-array name="posture_Arrays">
        <item>Two Hands in front of chest</item>
        <item>One Hand (Left)</item>
        <item>One Hand (Right)</item>
    </string-array>

    <string-array name="externalfactors_Arrays">
        <item>Sitting</item>
        <item>Walking</item>
        <item>Running</item>
    </string-array>

    <string name="title_activity_touchlogger">TouchLogger</string>


    <!-- Buttons -->
    <string name="button_continue" translatable="false">continue</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>

    <!-- -->
    <string name="drawer_open" translatable="false">open</string>
    <string name="drawer_close" translatable="false">close</string>
    <string name="title_activity_touchlogger_keyboard">Keyboard Activity</string>
    <string name="title_activity_pin_code">PinCodeActivity</string>
    <string name="title_activity_icon_grid">Icon Grid</string>
    <string name="label_icongridtitle">Icon Matching Game</string>
    <string name="label_icongrid_matchicons">Please match icons which are equal</string>

    <string name="file_headerfields" translatable="false">User;Layout;Orientation;Variation;Hardware_Addon;Input;Posture;External_Factors;Key;X;Y;DownTime;UpTime;begin_Timestamp;end_Timestamp;Sensor;Coordinates_X;Coordinates_Y;Coordinates_Z</string>
    <string name="title_activity_about">About Us</string>

    <!-- About Activity -->
    <string name="About_us">This App is project of University of Mannheim . For Further Information Please click the link below!</string>
    <string name="copyright">\@uni-Mannheim, 2015</string>

    <!-- Custom keyboard -->
    <string name="word_separators">\u0020.,;:!?\n()[]*&amp;@{}/&lt;&gt;_+=|&quot;</string>
    <string name="default_umlaut_a">a</string>
    <string name="default_umlaut_b">b</string>
    <string name="default_umlaut_c">c</string>
    <string name="default_umlaut_d">d</string>
    <string name="default_umlaut_e">e</string>
    <string name="default_umlaut_f">f</string>
    <string name="default_umlaut_g">g</string>
    <string name="default_umlaut_h">h</string>
    <string name="default_umlaut_i">i</string>
    <string name="default_umlaut_j">j</string>
    <string name="default_umlaut_k">k</string>
    <string name="default_umlaut_l">l</string>
    <string name="default_umlaut_m">m</string>
    <string name="default_umlaut_n">n</string>
    <string name="default_umlaut_o">o</string>
    <string name="default_umlaut_p">p</string>
    <string name="default_umlaut_q">q</string>
    <string name="default_umlaut_r">r</string>
    <string name="default_umlaut_s">s</string>
    <string name="default_umlaut_t">t</string>
    <string name="default_umlaut_u">u</string>
    <string name="default_umlaut_v">v</string>
    <string name="default_umlaut_w">w</string>
    <string name="default_umlaut_x">x</string>
    <string name="default_umlaut_y">y</string>
    <string name="default_umlaut_z">z</string>
    <string name="default_umlaut_none" />

    <string name="add_values">Add values to the chart</string>
    <string name="x">X</string>
    <string name="y">Y</string>
    <string name="add">Add</string>
</resources>
