<?xml version="1.0" encoding="utf-8"?>
<!--
/*
**
** Copyright 2008, The Android Open Source Project
**
** Licensed under the Apache License, Version 2.0 (the "License");
** you may not use this file except in compliance with the License.
** You may obtain a copy of the License at
**
**     http://www.apache.org/licenses/LICENSE-2.0
**
** Unless required by applicable law or agreed to in writing, software
** distributed under the License is distributed on an "AS IS" BASIS,
** WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
** See the License for the specific language governing permissions and
** limitations under the License.
*/
-->
<Keyboard
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:horizontalGap="@dimen/qwerty_default_key_horizontal_gap"
    android:keyHeight="@dimen/qwerty_default_key_height"
    android:keyWidth="@dimen/qwerty_default_key_width"
    android:verticalGap="@dimen/qwerty_default_key_vertical_gap">


    <Row android:rowEdgeFlags="top">
        <Key android:codes="113" android:popupCharacters="@string/default_umlaut_q" android:horizontalGap="@dimen/qwerty_first_col_horizontal_gap" android:keyEdgeFlags="left" android:keyLabel="q" />
        <Key android:codes="119" android:popupCharacters="@string/default_umlaut_w" android:keyLabel="w" />
        <Key android:codes="101" android:popupCharacters="@string/default_umlaut_e" android:keyLabel="e" />
        <Key android:codes="114" android:popupCharacters="@string/default_umlaut_r" android:keyLabel="r" />
        <Key android:codes="116" android:popupCharacters="@string/default_umlaut_t" android:keyLabel="t" />
        <Key android:codes="121" android:popupCharacters="@string/default_umlaut_y" android:keyLabel="y" />
        <Key android:codes="117" android:popupCharacters="@string/default_umlaut_u" android:keyLabel="u" />
        <Key android:codes="105" android:popupCharacters="@string/default_umlaut_i" android:keyLabel="i" />
        <Key android:codes="111" android:popupCharacters="@string/default_umlaut_o" android:keyLabel="o" />
        <Key android:codes="112" android:popupCharacters="@string/default_umlaut_p" android:keyEdgeFlags="right" android:keyLabel="p" />
    </Row>
    <Row>
        <Key android:codes="97"  android:popupCharacters="@string/default_umlaut_a" android:horizontalGap="@dimen/qwerty_first_col_horizontal_gap_second_line" android:keyEdgeFlags="left" android:keyLabel="a" />
        <Key android:codes="115" android:popupCharacters="@string/default_umlaut_s" android:keyLabel="s" />
        <Key android:codes="100" android:popupCharacters="@string/default_umlaut_d" android:keyLabel="d" />
        <Key android:codes="102" android:popupCharacters="@string/default_umlaut_f" android:keyLabel="f" />
        <Key android:codes="103" android:popupCharacters="@string/default_umlaut_g" android:keyLabel="g" />
        <Key android:codes="104" android:popupCharacters="@string/default_umlaut_h" android:keyLabel="h" />
        <Key android:codes="106" android:popupCharacters="@string/default_umlaut_j" android:keyLabel="j" />
        <Key android:codes="107" android:popupCharacters="@string/default_umlaut_k" android:keyLabel="k" />
        <Key android:codes="108" android:popupCharacters="@string/default_umlaut_l" android:keyEdgeFlags="right" android:keyLabel="l" />
    </Row>
    <Row>
        <Key android:codes="-1" android:keyIcon="@drawable/sym_keyboard_shift"  android:keyWidth="@dimen/qwerty_l_shift_key_width" android:horizontalGap="@dimen/qwerty_first_col_horizontal_gap" android:isModifier="true" android:isSticky="true" android:keyEdgeFlags="left" />
        <Key android:codes="122" android:popupCharacters="@string/default_umlaut_z" android:horizontalGap="@dimen/qwerty_horizontal_gap_right_of_shift"   android:keyLabel="z" />
        <Key android:codes="120" android:popupCharacters="@string/default_umlaut_x" android:keyLabel="x" />
        <Key android:codes="99"  android:popupCharacters="@string/default_umlaut_c" android:keyLabel="c" />
        <Key android:codes="118" android:popupCharacters="@string/default_umlaut_v" android:keyLabel="v" />
        <Key android:codes="98"  android:popupCharacters="@string/default_umlaut_b" android:keyLabel="b" />
        <Key android:codes="110" android:popupCharacters="@string/default_umlaut_n" android:keyLabel="n" />
        <Key android:codes="109" android:popupCharacters="@string/default_umlaut_m" android:keyLabel="m" />
        <Key android:keyWidth="@dimen/qwerty_backspace_key_width" android:horizontalGap="@dimen/qwerty_horizontal_gap_left_of_backspace" android:codes="-5" android:keyEdgeFlags="right" android:isRepeatable="true" android:keyIcon="@drawable/qwerty_key_icon_backspace_xml" />
    </Row>
    <Row android:rowEdgeFlags="bottom">
        <Key android:codes="-2" android:keyWidth="@dimen/qwerty_input_mode_key_width" android:horizontalGap="@dimen/qwerty_first_col_horizontal_gap"  android:keyEdgeFlags="left" android:keyLabel="\?123" />
        <Key android:codes="-3" android:keyIcon="@drawable/qwerty_key_icon_settings_xml"  />
        <Key android:codes="32"  android:keyWidth="@dimen/qwerty_space_key_width_no_voice" android:keyIcon="@drawable/sym_keyboard_space" android:horizontalGap="@dimen/qwerty_horizontal_gap_left_of_space"  />
        <Key android:codes="46,44" android:horizontalGap="@dimen/qwerty_horizontal_gap_right_of_space" android:keyLabel="." />
        <Key android:codes="40" android:keyWidth="@dimen/qwerty_enter_key_width" android:keyEdgeFlags="right" android:keyIcon="@drawable/sym_keyboard_return" />
    </Row>

    <Row android:keyHeight="0.0px" android:horizontalGap="0.0px" android:verticalGap="@dimen/qwerty_last_line_vertical_gap">
        <Key android:keyWidth="100.0%p" android:codes="-257" />
    </Row>
</Keyboard>