<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar" />


    <TextView
        android:id="@+id/textView_Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_bar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/train_Loggerapp" />


    <TextView
        android:id="@+id/textView_typeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_Title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="43dp"
        android:text="@string/label_type"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView_key"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView_typeLabel"
        android:layout_marginStart="16dp"
        android:layout_toEndOf="@+id/textView_typeLabel"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editText_key"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView_key"
        android:layout_alignStart="@+id/textView_typeLabel"
        android:layout_below="@+id/textView_key"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:inputType="text" />

    <TextView
        android:id="@+id/textView_typedKeyLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_typedKey"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_below="@+id/editText_key" />

    <TextView
        android:id="@+id/textView_typedKey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView_typedKeyLabel"
        android:layout_marginStart="16dp"
        android:layout_toEndOf="@+id/textView_typedKeyLabel"
        android:textAppearance="?android:attr/textAppearanceMedium" />


    <android.inputmethodservice.KeyboardView
        android:id="@+id/keyboardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:background="@drawable/keyboard_background"
        android:keyBackground="@drawable/btn_keyboard_key"
        android:visibility="gone" />




</RelativeLayout>
